--- a/app.json
+++ b/app.json
@@ -7,7 +7,7 @@
         "video-extract",
         "pyrogram"
     ],
-    "repository": "https://github.com/mohitbooraget/justry",
+    "repository": "https://github.com/mr-vermaji/justry",
     "success_url": "https://t.me/imendaxpublic",
     "stack": "container",
     "env": {
